--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -57,133 +57,144 @@
 
 \section{Introduction \& main goals}
 
-Many studies have been done over the Stackexchange community [such as], one of the biggest Q\&A sites in the world. The present is yet another study over the data of the famous site, but in this case, the study has two particularities, the use of Apache Spark with the library of Apache SystemML for the processing in a parallel environment, and the use of Survival Analysis to analyze the impact of the variables in the time an answer is accepted for each question, the "survival of each question" in the community.
+  Many studies have been done over the Stackexchange community [such as], one of the biggest Q\&A sites in the world. The present is yet another study over the data of the famous site, but in this case, the study has two particularities, the use of Apache Spark with the library of Apache SystemML for the processing in a parallel environment, and the use of Survival Analysis to analyze the impact of the variables in the time an answer is accepted for each question, the "survival of each question" in the community.
 
 
-\subsection{Main technologies}
+  \subsection{Main technologies}
 
-As one of the biggest Q\&A communities, Stackexchange has large amount of data of each interaction.
-Stackexchange is separated in several communities, regarding different topics. These communities can be small, as [] or really big, as Stackoverflow, the developers community. This particularity makes necessary the use technologies prepared to process large amounts of data, in the later case.
+    As one of the biggest Q\&A communities, Stackexchange has large amount of data of each interaction.
+    Stackexchange is separated in several communities, regarding different topics. These communities can be small, as [] or really big, as Stackoverflow, the developers community. This particularity makes necessary the use of technologies prepared to process large amounts of data, in the later case.
 
-Among the available big data technologies, the
+    The purpose of the present study is to analyze this big community, so a distributed processing technology has to be used. For this purpose, Apache Spark, the latest distributed open-source processing technology, has been chosen to parallelize the operations on the data.
 
-For this purpose, Apache Spark, the latest distributed open-source processing technology, has been chosen to parallelize the operations on the data.
+    Spark ML is the machine learning library of spark, which contains lots of algorithms. It also includes some Survival Analysis algorithms, but just for parametric modeling. This gives an excuse to use the recently adopted by the Apache Foundation SystemML, a machine learning library developed by IBM, which has non, semi and parametric algorithms for survival analysis.
 
-Spark ML is the machine learning library of spark, which contains lots of algorithms. It also includes some Survival Analysis algorithms, but just for parametric modeling. This gives an excuse to use the recently adopted by the Apache Foundation SystemML, a machine learning library developed by IBM, which has non, semi and parametric algorithms for survival analysis.
+    Regarding the development environment, Jupyter Notebook provides a simple and flexible interface for this analysis, and can also be integrated with Spark, allowing the complete development in just one environment.
 
+  \subsubsection{Apache Spark}
 
-\subsubsection{Apache Spark}
+    Apache Spark is a distributed processing technology developed in Scala by Databricks that represents the next step of Apache Hadoop, including the best parts of it, such as the Hadoop File System, but under a complete new paradigm that allows operations different from the famous map-reduce, using RAM as storage for results rather than writing to disk, lazy and optimized execution of tasks, and special focus on machine learning and SQL-like language, to mention some of the main features.
 
-Apache Spark is a distributed processing technology developed in Scala by Databricks that represents the next step of Apache Hadoop, including the best parts of it, such as the Hadoop File System, but under a complete new paradigm that allows operations different from the famous map-reduce, using RAM as storage for results rather than writing to disk and lazy and optimized execution of tasks, to mention some of the main features.
+  \subsubsection{Apache SystemML}
 
-\subsubsection{Apache SystemML}
+    Recently included in the Apache Foundation Incubating  program, Apache SystemML is a machine learning library that works over distributed frameworks, Spark or Hadoop, written in Java.
 
-Recently included in the Apache Foundation Incubating  program, Apache SystemML is a machine learning library that works over distributed frameworks, Spark or Hadoop, written in a self made language, Distributed Machine Learning (dml) and with a Python, Scala or R like sintaxis API.
+    This library provides many distributed implementations of important algorithms as well as a sintaxis to create new algorithms in a distributed mode. It provides a high-level declarative machine learning language, which has two variations, the R-like sintaxis, DML, and the Python-like sintaxis, Py-DML. All the
 
-This library provides many distributed implementations of important algorithms as well as a sintaxis to create new algorithms in a distributed mode.
+  \subsection{The Stackexchange data}
 
-\subsection{The Stackexchange data}
+    Stackexchange facilitates raw {partially processed?} data from the communities database every once in a while {or every three months?} for data scientists and people in general to download and analyze. The data is available in a torrent file and each package has about 35 - 40 GB of compressed information.
 
-Stackexchange facilitates raw {partially processed?} data from the communities database every once in a while {or every three months?} for data scientists and people in general to download and analyze. The data is available in a torrent file and each package has about 35 - 40 GB of compressed information.
+    This compressed file has data from different communities for a certain period of time. In this case, the analysis is done over Scyfy community, which is a median size community for science-fiction Q\&A.
 
-This compressed file has data from different communities for a certain period of time. In our case, the analysis is done over Scyfy community, wich is a median size community for science-fiction Q\&A.
+    Selecting just the data from Scyfy community, it weights around 110 MB in a 7z compressed format. The uncompressed data is divided in 8 files, regarding different information:
 
-\subsection{Main Objectives}
+    \begin{table}
+      \centering
+      \begin{tabular}{|c|c|}
+        \hline
+        cosa & cosa \\ \hline
+      \end{tabular}
+      \caption{}
+      \label{}
+    \end{table}
 
-For this study several objectives have been proposed:
+  \subsection{Main Objectives}
 
-\begin{itemize}
+    For this study several objectives have been proposed:
 
-  \item Use Spark to make the data cleaning to create a script for further research on the Stackexchange site.
+    \begin{itemize}
 
-  \item Verify SystemML integration with Spark for further research and scalability.
+      \item Use Spark to make the data cleaning to create a script for further research on the Stackexchange site.
 
-  \item Use SystemML survival analysis algorithms to analyze Stackexchange's data and obtain conclusions on the main variables affecting the time taken by the community to answer a question.
+      \item Verify SystemML integration with Spark for further research and scalability.
 
-\end{itemize}
+      \item Use SystemML survival analysis algorithms to analyze Stackexchange's data and obtain conclusions on the main variables affecting the time taken by the community to answer a question.
+
+    \end{itemize}
 
 \section{Technologies}
 
-The downloaded data from Stackexchange for the analysis [weights?] 40 GB, which is enough amount [size] to consider distributed processing.
+  The downloaded data from Stackexchange for the analysis [weights?] 40 GB, which is enough amount [size] to consider distributed processing.
 
-\subsection{Apache Spark}
+  \subsection{Apache Spark}
 
-The latest distributed processing technology for data processing is Apache Spark, born in [2015] in [Ucla?], which is the predecesor of the well known processing framework Apache Hadoop, with all it's ecosystem.
+    The latest distributed processing technology for data processing is Apache Spark, born in [2015] in [Ucla?], which is the predecesor of the well known processing framework Apache Hadoop, with all it's ecosystem.
 
-Comparing to Hadoop, Spark is able to speedup calculations using RAM instead of disk, with a higher variety of operations, not limited to Map-Reduce,  and [].
+    Comparing to Hadoop, Spark is able to speedup calculations using RAM instead of disk, with a higher variety of operations, not limited to Map-Reduce,  and [].
 
-\subsubsection{Apache Spark Structure}
-
-
-
-
-\subsection{Apache SystemML}
-
-Developed by IBM, Apache SystemML is the [precursor] of Spark ML (MLLib), the machine learning libraries of Spark.
-SystemML is coded in a self-made programming language, Distributed Machine Learning (DML) and it can be used from Spark or Hadoop in a [submit-like execution or in a interactive execution, the one it has been used in this study]
-
-\subsubsection{SystemML Structure}
+    \subsubsection{Apache Spark Structure}
 
 
 
-\subsection{Reproducible research with Python, Scala and Jupyter}
 
-Going down to the selection of the development environment, it was important to use a standardized one so that the analysis could be reproduced by anyone. Jupyter notebook is one of the most commonly used, specially in the education and investigation institutions, it is easy to use and configure and it can be easily integrated with Spark.
+  \subsection{Apache SystemML}
 
-To configure the same environment as the one used in this study, some steps have to be followed:
+    Developed by IBM, Apache SystemML is the [precursor] of Spark ML (MLLib), the machine learning libraries of Spark.
+    SystemML is coded in a self-made programming language, Distributed Machine Learning (DML) and it can be used from Spark or Hadoop in a [submit-like execution or in a interactive execution, the one it has been used in this study]
 
-\subsubsection{Environment setup}
+    \subsubsection{SystemML Structure}
 
 
-\begin{table}
-\centering
-\begin{tabular}{| c | c |}
-\hline
-Technology & Version \\ \hline
-Jupyter Notebook & 4.3.1 \\ \hline
-Python & 3.5 \\ \hline
-Scala & 2.11 \\ \hline
-Toree kernel & 0.2.0.dev1 \\ \hline
-Spark & 2.1 \\ \hline
-SystemML & 0.12.0 \\ \hline
-\end{tabular}
-\caption{Technologies and versions used}
-\end{table}
 
-The first step is to setup Jupyter Notebook, either running it in a Docker container or installing it directly on the machine. The docker image can be obtained entering the following command in a shell: \emph{docker pull jupyter/notebook}. Regarding the other option, installing it, the instructions can be found in the following link: \emph{http://jupyter.readthedocs.io/en/latest/install.html}.
+  \subsection{Reproducible research with Python, Scala and Jupyter}
 
-Once Jupyter Notebook running, the kernels have to be configured.
+    Going down to the selection of the development environment, it was important to use a standardized one so that the analysis could be reproduced by anyone. Jupyter notebook is one of the most commonly used, specially in the education and investigation institutions, it is easy to use and configure and it can be easily integrated with Spark.
 
-For the python kernel, the SystemML library has to be installed, to do so,
+    To configure the same environment as the one used in this study, some steps have to be followed:
+
+    \subsubsection{Environment setup}
+
+
+    \begin{table}
+    \centering
+    \begin{tabular}{| c | c |}
+    \hline
+    Technology & Version \\ \hline
+    Jupyter Notebook & 4.3.1 \\ \hline
+    Python & 3.5 \\ \hline
+    Scala & 2.11 \\ \hline
+    Toree kernel & 0.2.0.dev1 \\ \hline
+    Spark & 2.1 \\ \hline
+    SystemML & 0.12.0 \\ \hline
+    \end{tabular}
+    \caption{Technologies and versions used}
+    \end{table}
+
+    The first step is to setup Jupyter Notebook, either running it in a Docker container or installing it directly on the machine. The docker image can be obtained entering the following command in a shell: \emph{docker pull jupyter/notebook}. Regarding the other option, installing it, the instructions can be found in the following link: \emph{http://jupyter.readthedocs.io/en/latest/install.html}.
+
+    Once Jupyter Notebook running, the kernels have to be configured.
+
+    For the python kernel, the SystemML library has to be installed, to do so,
 
 
 
 \section{Infrastructure and resources}
 
-As commented before, selecting an environment that
+  As commented before, selecting an environment that
 
-\subsection{Architecture scheme}
+  \subsection{Architecture scheme}
 
-\subsection{Configuration}
+  \subsection{Configuration}
 
-\subsection{Workflow}
+  \subsection{Workflow}
 
-The first step is to clean the data and make the feature selection
+    The first step is to clean the data and make the feature selection
 
 
 \section{Results}
 
-\subsection{Used data}
+  \subsection{Used data}
 
-\subsection{Kaplan-Meier model}
+  \subsection{Kaplan-Meier model}
 
-\subsection{Cox Proportional Hazards Model}
+  \subsection{Cox Proportional Hazards Model}
 
 \section{Conclusions}
 
-\subsection{Most important results}
+  \subsection{Most important results}
 
-\subsection{Lessons learnt}
+  \subsection{Lessons learnt}
 
 
 
